--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "97c4a9dd-a37d-4279-9741-befc71c8093c",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
     "    \n",
     "db = firestore.client()\n",
     "\n",
-    "with open('computer.csv', newline='', encoding='ISO-8859-1') as csvfile:\n",
+    "with open('graphics.csv', newline='', encoding='ISO-8859-1') as csvfile:\n",
     "    reader = csv.DictReader(csvfile)\n",
     "    for row in reader:\n",
     "        question_data = {\n",
@@ -99,6 +99,14 @@
     "\n",
     "print(\"Upload complete.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab413cf2-6974-44c1-a64a-6028ccc64e0c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
